--- a/front/display/src/App.css
+++ b/front/display/src/App.css
@@ -1,104 +1,11 @@
 .App {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-wrap: wrap;
   align-content: space-evenly;
   justify-content: space-evenly;
-  color: white;
+  color: #EEE;
+  font-family: 'Raleway', sans-serif;
 }
 
-.item {
-  display: flex;
-  flex-direction: column;
-  background-color: #30353f;
-}
 
-.item-picture {
-  flex: 3;
-  display: flex;
-  flex-direction: column;
-  background-position: center center;
-  background-size: cover;
-}
-
-.item-content {
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  padding: 12px;
-}
-
-.item-title {
-  flex: 1;
-  display: flex;
-  padding: 12px;
-  align-items: center;
-  text-align: center;
-  font-size: 1.2em;
-  background-color: rgba(48, 53, 63, 0.85);
-}
-
-.item-description {
-  display: flex;
-  color: rgb(145, 161, 191);
-  align-items: center;
-  text-align: center;
-  flex: 3;
-  font-size: 0.9em;
-}
-
-.item-meta {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: rgb(140, 154, 183);
-  font-size: 0.9em;
-}
-
-.item-date {
-  text-align: left;
-}
-
-.item-author {
-  text-align: right;
-}
-
-.appear {
-  opacity: 0;
-  animation-name: animation-appear;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-.disappear {
-  opacity: 1;
-  animation-name: animation-disappear;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes animation-appear {
-  0%   {
-    opacity: 0.1;
-    transform: rotate3d(1, 0, 0, 90deg);
-
-  }
-  100% {
-    opacity: 1;
-    transform: rotate3d(1, 0, 0, 0deg);
-  }
-}
-
-@keyframes animation-disappear {
-  0%   {
-    opacity: 1;
-    transform: rotate3d(1, 0, 0, 0deg);
-
-  }
-  100% {
-    opacity: 0.1;
-    transform: rotate3d(1, 0, 0, 90deg);
-  }
-}
