add most popular tweets

--- a/front/display/src/App.css
+++ b/front/display/src/App.css
@@ -4,8 +4,6 @@
   flex-wrap: wrap;
   align-content: space-evenly;
   justify-content: space-evenly;
-  color: #EEE;
-  font-family: 'Raleway', sans-serif;
+  color: #eee;
+  font-family: "Raleway", sans-serif;
 }
-
-
