--- a/front/display/src/desktop/Desktop.css
+++ b/front/display/src/desktop/Desktop.css
@@ -13,11 +13,54 @@
   cursor: pointer;
 }
 
+.item-like-dislike {
+  display: none;
+  flex: 1;
+  text-align: center;
+  color: rgb(140, 154, 183);
+  font-size: 0.9em;
+}
+
+.item-like {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  flex: 1;
+  padding: 0px 32px;
+}
+
+.item-like:hover {
+  border-bottom: 4px solid #37d07d;
+}
+.item-dislike {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  flex: 1;
+  padding: 0px 32px;
+}
+.item-dislike:hover {
+  border-bottom: 4px solid #d39b1c;
+}
+
 .item.desktop:hover {
-  box-shadow: 0px 4px 10px 4px rgba(0,0,0,0.6);
+  box-shadow: 0px 4px 10px 4px rgba(0, 0, 0, 0.6);
   position: relative;
   bottom: 4px;
 }
+/*
+.item.desktop .item-content:hover .item-description {
+  display: none;
+}
+.item.desktop .item-content:hover .item-meta {
+  display: none;
+}
+.item.desktop .item-content:hover .item-like-dislike {
+  display: flex;
+}
+*/
 
 .item-picture {
   flex: 3;
@@ -42,6 +85,10 @@
   text-align: center;
   font-size: 1.2em;
   background-color: rgba(48, 53, 63, 0.85);
+}
+
+.item-title:hover {
+  text-decoration: underline;
 }
 
 .item-description {
@@ -70,6 +117,60 @@
   text-align: right;
 }
 
+.tweet-item-header {
+  display: flex;
+  padding: 16px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.tweet-item-header-left {
+    display: flex;
+    line-height: 24px;
+}
+.tweet-item-header-right {
+    display: flex;
+    line-height: 48px;
+    color: #8c9ab7;
+}
+.tweet-item-header-right span {
+    margin-right: 8px;
+}
+.tweet-item-profile-picture {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  margin-right: 16px;
+}
+
+.tweet-item-user-name {
+  font-weight: bold;
+}
+
+.tweet-item-user-screen-name {
+  padding-left: 4px;
+  color: rgb(140, 154, 183);
+  font-size: 0.9em;
+}
+
+.tweet-item-content {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 16px 16px 16px;
+  flex: 1;
+}
+
+.tweet-item-text {
+    padding-bottom: 16px;
+}
+
+.tweet-item-media {
+    width: 100%;
+    flex: 1;
+    background-position: center center;
+    background-size: cover;
+}
+
 .appear {
   opacity: 0;
   animation-name: animation-appear;
@@ -85,10 +186,9 @@
 }
 
 @keyframes animation-appear {
-  0%   {
+  0% {
     opacity: 0.1;
     transform: rotate3d(1, 0, 0, 90deg);
-
   }
   100% {
     opacity: 1;
@@ -97,10 +197,9 @@
 }
 
 @keyframes animation-disappear {
-  0%   {
+  0% {
     opacity: 1;
     transform: rotate3d(1, 0, 0, 0deg);
-
   }
   100% {
     opacity: 0.1;
