work on mobile version

--- a/front/display/src/mobile/Mobile.css
+++ b/front/display/src/mobile/Mobile.css
@@ -152,3 +152,55 @@
 .item-author {
   text-align: right;
 }
+
+.tweet-item-header {
+  padding: 16px;
+}
+
+.tweet-item-header-left {
+    display: flex;
+    line-height: 24px;
+}
+.tweet-item-header-right {
+    display: flex;
+    line-height: 48px;
+    color: #8c9ab7;
+}
+.tweet-item-header-right span {
+    margin-right: 8px;
+}
+.tweet-item-profile-picture {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  margin-right: 16px;
+}
+
+.tweet-item-user-name {
+  font-weight: bold;
+}
+
+.tweet-item-user-screen-name {
+  padding-left: 4px;
+  color: rgb(140, 154, 183);
+  font-size: 0.9em;
+}
+
+.tweet-item-content {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 16px 16px 16px;
+  flex: 1;
+}
+
+.tweet-item-text {
+    padding-bottom: 16px;
+    padding-top: 16px;
+}
+
+.tweet-item-media {
+    width: 100%;
+    flex: 1;
+    background-position: center center;
+    background-size: cover;
+}
